<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flipulator</string>
    <string name="flipulator_premium">Flipulator Premium Version</string>
    <string name="aboutflippremium">About</string>
    <string name="calculate">Calculate</string>
    <string name="donate">Donate</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="openFiles">Open Files</string>
    
    <string name="what_is_it">What Is A Flipulator?</string>
    <string name="property">Property</string>
    <string name="credits">Credits</string>
    
    <string name="flipulator">A Flipulator is a mobile home evaluation app designed to determine the viability of rehabbing a house to determine profitability.
                              Profitability is determined by using either a set rehab budget (a number) or the rehab type (set dollar amount per sf).</string>
    <string name="mobile">Mobile Developer:  Daniel Burgner</string>
    <string name="original_design">Originally Created By:  William Grenier and Dan Benson</string>

    <string name="mission">I am a real estate investor whose mission is to provide easy to use tools for other real estate investors to
                           effectively evaluate properties and maximize profitability.  My goals include the expansion of this app that will
                           be available on the App Store and to provide a better user experience.  Your donation will help reach my goals and
                           provide a better user experience for you.  Please make a donation today.</string>

    <string name="donations__google_android_market">Google Play Store</string>
    <string name="donations__google_android_market_not_supported_title">In-App Donations are not supported.</string>
    <string name="donations__google_android_market_not_supported">In-App Donations are not supported. Is Google Play Store installed correctly?</string>
    <string name="donations__google_android_market_description">Google takes 30 % off every donation!</string>
    <string name="donations__paypal">PayPal</string>
    <string name="donations__paypal_description">You can choose how much you want to donate after clicking the button!</string>
    <string name="txtDonateNow">Donate!</string>
    <string name="txtDonatePaypal">Donate with Paypal</string>
    <string name="txtHowMuch">How much?</string>
    <string name="donations__thanks_dialog_title">Thanks!</string>
    <string name="donations__thanks_dialog">Thanks for donating!\nI really appreciate this!</string>
    <string name="donations__alert_dialog_title">Error occurred</string>
    <string name="donations__button_close">Close</string>
    
    <string name="location">Location</string>
    <string name="salesmort">Sales/Mortgage Info</string>
    <string name="sales">Sale Info</string>
    <string name="mortgage">Mortgage Info</string>
    <string name="rehab">Rehab</string>
    <string name="reserves">Reserves</string>
    <string name="closexppmi">Closing Exp/Prop Mkt Info</string>
    <string name="finalresult">Final Result</string>
    
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zip_code">ZIP Code:</string>
    <string name="citystzip">City/State/ZIP Code:</string>
    <string name="sq_footage">Square Footage:</string>
    <string name="bedrooms">Bedrooms:</string>
    <string name="bathrooms">Bathrooms:</string>
    <string name="bed_bath">BR/BA:</string>
    
    <string name="closholdcosts">Closing/Holding:</string>
    <string name="profit">Profit:</string>
    <string name="roi">ROI:</string>
    <string name="cashoncash">Cash on Cash Return:</string>
    
    <string name="salePrice">Sale Price:</string>
    <string name="percentDown">Percent Down %:</string>
    <string name="downPayment">Down Payment:</string>
    <string name="loanAmount">Loan Amount:</string>
    <string name="offerBid">Offer/Bid Price:</string>
    <string name="interestRate">Interest Rate %:</string>
    <string name="term">Term (months):</string>
    <string name="monthlyPmt">Monthly Pmt:</string>
    <string name="budgetItems">Budget Items:</string>
    
    <string name="monthlyRes">Monthly</string>
    <string name="semiAnnRes">Semi-Annual</string>
    <string name="annualRes">Annual</string>
    <string name="mortPmt">Mortgage:</string>
    <string name="insurance">Insurance:</string>
    <string name="taxes">Property Taxes:</string>
    <string name="electric">Electric:</string>
    <string name="gas">Gas:</string>
    <string name="water">Water:</string>
    <string name="totres">Total Reserves:</string>
    
    <string name="closingExp">Closing Expenses</string>
    <string name="realestcomm">Real Estate Comm:</string>
    <string name="commission">Commission %:</string>
    <string name="buyerClosCost">Buyer Clos Cost:</string>
    <string name="bccPercentage">Buyer Closing Cost %:</string>
    <string name="sellClosCost">Sell Clos Cost:</string>
    <string name="sccPercentage">Seller Closing Cost %:</string>
    <string name="totalCosts">Total Costs:</string>
    <string name="outOfPocketExp">Out of Pocket Exp:</string>
    
    <string name="propMktInfo">Property Market Information</string>
    <string name="FMVARV">FMV/ARV:</string>
    <string name="comparables">Comparables:</string>
    <string name="sellingPrice">Selling Price:</string>
    <string name="buyerCosts">Buy + Costs:</string>
    <string name="grossProfit">Gross Profit:</string>
    <string name="capGains">Capital Gains:</string>
    <string name="netProfit">Net Profit:</string>
    
    <string name="returnInvestment">Return On Investment</string>
    <string name="moneyOut">Money Out:</string>
    <string name="moneyIn">Money In:</string>
    <string name="percReturn">% Return:</string>
    <string name="cashCashRet">Cash on Cash Return:</string>

    <string name="rehab_class">Select Rehab Class</string>
    <string name="finance_class">Select Finance Class</string>
    <string name="rehab_number">Budget Flat Rate</string>
    <string name="rehab_type">Rehab Type</string>
    <string name="rehab_budget">Rehab Budget:</string>
    <string name="original">Original</string>
    <string name="owner_carry">Owner Carry</string>
    <string name="finance_rehab">Finance Rehab</string>
    
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="help">Help</string>
    <string name="email">Email Results</string>
    <string name="main_menu">Main Menu</string>
    <string name="save">Save</string>

    <string-array name="donation_google_catalog_values">
        <item>$1.00</item>
        <item>$5.00</item>
        <item>$10.00</item>
        <item>$25.00</item>
        <item>$50.00</item>
        <item>$100.00</item>
    </string-array>
    
    <string-array name="rehab_type">
		<item>Low</item>
		<item>Medium</item>
		<item>High</item>
		<item>Super-High</item>
		<item>Bulldozer</item>
	</string-array>
    
    <string-array name="time_frame">
		<item>6 Months</item>
		<item>9 Months</item>
		<item>12 Months</item>
	</string-array>
    
    <string name="action_settings">Settings</string>

</resources>
