<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity" >

    <LinearLayout
        android:id="@+id/llRehabType"
        android:layout_width="fill_parent"
        android:layout_height="35sp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textSize="16sp"
            android:text="@string/rehab_class" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rdoRehab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llRehabType"
        android:layout_marginLeft="18dp" >

        <RadioButton
            android:id="@+id/rdoRehabNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rehab_number" />

        <RadioButton
            android:id="@+id/rdoRehabType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rehab_type" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/llFinanceType"
        android:layout_width="fill_parent"
        android:layout_height="35sp"
        android:layout_below="@+id/rdoRehab"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textSize="16sp"
            android:text="@string/finance_class" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rdoFinance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rdoRehab"
        android:layout_below="@+id/llFinanceType" >

        <RadioButton
            android:id="@+id/rdoOriginal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original" />

        <RadioButton
            android:id="@+id/rdoOwnerCarry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_carry" />

        <RadioButton
            android:id="@+id/rdoFinanceRehab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finance_rehab" />
    </RadioGroup>
    
    <LinearLayout
        android:id="@+id/llHelp"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_above="@+id/llPrevNext"
        android:orientation="horizontal" >

        <View
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/txtHelp"
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:layout_weight="0.5"
            android:ems="10"
            android:text="@string/help"
            android:background="#690"
            android:textColor="#ffffff" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/llPrevNext"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:layout_weight="0.5"
            android:onClick="prevPage"
            android:text="@string/prev"
            android:background="#690"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:layout_weight="0.5"
            android:onClick="nextPage"
            android:text="@string/next"
            android:background="#690"
            android:textColor="#ffffff" />
    </LinearLayout>

</RelativeLayout>