<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5f5dc" xmlns:tools="http://schemas.android.com/tools" tools:context=".RehabActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/rehab" />

        <Button
            android:id="@+id/txtHelp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:text="@string/help" />
    </LinearLayout>
    
    <RadioGroup
        android:id="@+id/rdoRehab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="28dp" >

        <RadioButton
            android:id="@+id/rdoRehabNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rehab_number" />

        <RadioButton
            android:id="@+id/rdoRehabType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rehab_type" />
    </RadioGroup>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvRehabBudget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/rehab_budget" />

        <EditText
            android:id="@+id/txtRehabBudget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvRehabType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/rehab_class" />

        <Spinner
            android:id="@+id/spnRehabType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="nextPage"
            android:text="@string/next" />
    </LinearLayout>
    

</LinearLayout>