<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5dc"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielburgnerjr.flipulator.WhatIsFlipulator" >

    <LinearLayout
        android:id="@+id/WhatIsFlipulator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textWhatIsFlipulator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/what_is_it" />

        <TextView
            android:id="@+id/textFlipulator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/flipulator" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Credits"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/WhatIsFlipulator"
        android:layout_below="@+id/WhatIsFlipulator"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/credits" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/mobile" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="57dp"
            android:text="@string/original_design" />

    </LinearLayout>

</RelativeLayout>